--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,10 @@
 @import "tailwindcss";
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-roboto-mono: "Roboto Mono", monospace;
 }
 
 @theme inline {
@@ -10,6 +12,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-roboto-mono: "Roboto Mono", monospace;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,7 +23,7 @@
 }
 
 body {
-  background: var(--background);
+  background: #0E1428;
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-roboto-mono);
 }
